Fix h1 letter spacing

--- a/style.css
+++ b/style.css
@@ -737,7 +737,7 @@ ul.debug-menu {
 /* Subscribe page */
   .main-bg-subs::before {
     width: 100%;
-    height: 40%;
+    height: 45%;
     min-height: 20%;
     background-size: cover;
     background-position: center;
@@ -745,7 +745,7 @@ ul.debug-menu {
   }
   .main-bg-subs .main_header,
   .about-us-bg .main_header {
-    flex: 0 0 300px;
+    flex: 0 0 45%;
 }
 
 .main-about {
@@ -754,7 +754,7 @@ ul.debug-menu {
 
 .about-us-bg::before {
   width: 100%;
-  height: 40%;
+  height: 45%;
   min-height: 0;
   top: 0;
   background-size: cover;
@@ -810,7 +810,7 @@ ul.debug-menu {
 @media (max-width: 440px){
   h1 {
     font-size: 42px;
-    letter-spacing: normal;
+    letter-spacing: 3px;
   }
   .nav-icons {
     position: unset;
@@ -844,6 +844,7 @@ ul.debug-menu {
   .about-us-bg .main_header,
   .main-bg-contact .main_header {
     flex: 0 0 45%;
+    min-height: 45%;
 }
   .main-bg-subs::before,
   .about-us-bg::before,
@@ -864,7 +865,7 @@ ul.debug-menu {
 @media (max-width: 345px) {
   h1 {
     font-size: 41px;
-    letter-spacing: normal;
+    letter-spacing: 3px;
   }
   .content-wrapper,
   .more-nav__btn  {
